[gd_scene load_steps=13 format=2]

[ext_resource path="res://background/background.png" type="Texture" id=1]
[ext_resource path="res://sprites/game_over.png" type="Texture" id=2]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=3]
[ext_resource path="res://Commodore Pixeled.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/asteroid2.png" type="Texture" id=5]
[ext_resource path="res://sounds/explosao.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Commodore Pixeled.ttf"

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 71
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 71
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="game_over" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
scale = Vector2( 0.5625, 1 )
texture = ExtResource( 1 )

[node name="game_over" type="Sprite" parent="."]
position = Vector2( 184, 150 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="try_btn" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( -8, 472 )
scale = Vector2( 0.742857, 0.581818 )
normal = ExtResource( 5 )

[node name="quit_btn" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 160, 472 )
scale = Vector2( 0.742857, 0.581818 )
normal = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.111
anchor_top = 0.8
anchor_right = 0.436
anchor_bottom = 0.858
margin_left = 0.0399971
margin_right = 0.0399933
margin_bottom = 1.88
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "TENTAR
NOVAMENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_left = 0.578
anchor_top = 0.8
anchor_right = 0.903
anchor_bottom = 0.858
margin_left = -0.0800018
margin_top = 6.10352e-05
margin_right = -0.0800171
margin_bottom = -0.119934
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "SAIR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
anchor_top = 0.462
anchor_right = 0.5
anchor_bottom = 0.539
margin_top = 21.32
margin_bottom = 21.04
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "Sua
Pontuação"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Label3"]
anchor_left = 0.1
anchor_top = 1.143
anchor_right = 0.9
anchor_bottom = 2.571
margin_top = -0.00699997
margin_bottom = -5.979
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer"]
anchor_left = 0.489
anchor_top = 0.462
anchor_right = 0.989
anchor_bottom = 0.539
margin_left = -0.0400085
margin_top = 21.32
margin_right = -0.0400085
margin_bottom = 21.04
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "Melhor
Pontuação"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Label4"]
margin_left = 30.0
margin_top = 56.0
margin_right = 150.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 48.0
margin_top = 234.0
margin_right = 321.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.964706, 0.0509804, 0.0509804, 1 )
text = "RECORDE
DE
PONTUAÇÃO!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="CanvasLayer/try_btn" to="." method="_on_try_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
